# fp

./: .gitignore
hw1/_build/: .db  .digest-db  log
hw1/_build/default/.dune/: configurator.v2
hw1/_build/default/src/: submission.cma  submission.cmxa  submission.cmxs
hw1/_build/default/tests/: tests.ml
hw1/src/: dune  submission.ml
hw1/tests/: dune
hw2/: .zshrc  Readme.md  dune  test.txt
hw2/_build/: .db  .digest-db  log
hw2/_build/default/.dune/: configurator
hw2/_build/default/src/: keywordcount.ml  simpledict.cma  simpledict.cmxa  simpledict.cmxs  simpledict.pp.ml  simpledict.pp.mli  utils.cma  utils.cmxa  utils.cmxs
hw2/_build/default/tests/: dune  tests.ml
hw2/src/: dune  keywordcount.ml  simpledict.ml  simpledict.mli  utils.ml  utils.mli
hw2/test_files/: complex_commented.ml  simple.ml
hw2/test_files/complex_nesting/: complex_nested.ml
hw2/tests/: tests.ml
hw3/: Readme.md  bisect192618511.coverage  bisect281235520.coverage  bisect537896989.coverage  bisect85764618.coverage  dune
hw3/_coverage/: index.html
hw3/_coverage/src/: postfix_calc.ml.html
hw3/src/: dune  finite_group.ml  finite_group.mli  postfix_calc.ml  postfix_calc.mli  ring.ml  ring.mli
hw3/tests/: dune  tests.ml
hw4/: Readme.md  dune
hw4/_coverage/: index.html
hw4/_coverage/src/: lib.ml.html
hw4/src/: dune  lib.ml  lib.mli  ngrams.ml
hw4/tests/: dune  groot.txt  moby.txt  tests.ml
hw5/: Readme.md  dune
hw5/src/: discussion.txt  dune  monads.ml  monads.mli
hw5/tests/: dune  tests.ml
lectures/: effects.ml
(+30 files in other folders)
