(library
  (name simpledict)
  (modules
    simpledict)
  (libraries
    core)
  (preprocess
  (pps ppx_deriving.show)))

(library
  (name utils)
  (modules
    utils)
  (libraries
    core))

(executable
  (name keywordcount)
  (modules
    keywordcount)
  (libraries
    core
    core_unix
    stdio
    simpledict
    utils))